--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -6,6 +6,15 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Server Configuration
+server.port=8080
+
 # Kafka Bootstrap Server
 spring.kafka.bootstrap-servers=localhost:9092
 
@@ -26,6 +35,13 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+# Mail Configurations
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=suyashbaoney58@gmail.com
+spring.mail.password=xlib wjtq xoxs zays
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Logging Configuration
 logging.level.org.springframework.security=DEBUG
