--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 # Mail Configurations
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=suyashbaoney58@gmail.com
-spring.mail.password=xlib wjtq xoxs zays
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
