--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=docease
 
+# Server Configuration
+server.port=8080
+
 # MySQL Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/docease
 spring.datasource.username=root
@@ -12,8 +15,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Server Configuration
-server.port=8080
+# JWT Security Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expirationMs=86400000  
 
 # Kafka Bootstrap Server
 spring.kafka.bootstrap-servers=localhost:9092
