Consuming Gemini API for Health Tips
Gemini API Wrapper for Health Tips
✅ Created HealthTipService (renamed from GeminiService) to call Gemini API
✅ Used WebClient instead of Gemini SDK for API integration
✅ Stored API key and URL in environment variables (application.properties)
✅ Created /generate-health-tip endpoint to fetch & save health tips
✅ Implemented JSON response parsing using ObjectMapper and JsonNode

Corrected Field Matching in UserRepository
 - Modified UserRepository to adjust query method to match the correct field type

Updated Repository Calls
 - Modifed authenticateWithMFA and authenticateWithoutMFA to use the new query method.

--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -47,6 +47,10 @@ spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Gemini API Configurations
+GEMINI_API_URL=${GEMINI_API_KEY}
+GEMINI_API_KEY=${GEMINI_API_KEY}
+
 # Logging Configuration
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
