Added refresh token support & password reset functionality
🔹 JWT Enhancements
✅ Implemented refresh tokens for extended authentication
✅ Added token expiration customization for patients (free) & doctors (paid)
✅ Created /refresh-token API for access token renewal
✅ Updated JwtUtil to generate & validate refresh tokens
✅ Fixed missing extractUsername method in JwtUtil
🔹 Password Reset Functionality
✅ Modified /refresh-token to also handle password reset requests
✅ Added /forgot-password API for requesting password reset links
✅ Implemented generatePasswordResetToken() in JwtUtil
✅ Fixed missing sendPasswordResetEmail() method in EmailService
✅ Ensured password reset email includes a secure token
🔹 Controller & Service Refactoring
✅ Moved password reset logic to AuthService for clean separation
✅ Updated AuthController to call AuthService.initiateForgotPassword()
✅ Refactored JWT validation & claim extraction in JwtUtil

--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # JWT Security Configuration
 jwt.secret=${JWT_SECRET}
 jwt.expirationMs=86400000  
+jwt.refreshExpirationMs=2592000000   # 30 days
+jwt.passwordResetExpirationMs=600000 # 10 minutes
 
 # Kafka Bootstrap Server
 spring.kafka.bootstrap-servers=localhost:9092
