Fixed Jwt Expiration numeric string length issue
- Switched JWT expiration from int to long to support large values

- Resolved token parsing errors due to improper formatting

- Refactored authentication flow for better security & scalability

--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -17,9 +17,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # JWT Security Configuration
 jwt.secret=${JWT_SECRET}
-jwt.expirationMs=86400000  
-jwt.refreshExpirationMs=2592000000   # 30 days
-jwt.passwordResetExpirationMs=600000 # 10 minutes
+jwt.expirationMs=86400000
+# 30 days
+jwt.refreshExpirationMs=2592000000
+# 10 minutes
+jwt.passwordResetExpirationMs=600000
 
 # Kafka Bootstrap Server
 spring.kafka.bootstrap-servers=localhost:9092
@@ -50,7 +52,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Gemini API Configurations
-GEMINI_API_URL=${GEMINI_API_KEY}
+GEMINI_API_URL=${GEMINI_API_URL}
 GEMINI_API_KEY=${GEMINI_API_KEY}
 
 # Logging Configuration
