reducing Kafka noise

--- a/docease/src/main/resources/application.properties
+++ b/docease/src/main/resources/application.properties
@@ -61,3 +61,8 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.http=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
+
+# Temporarily reducing Kafka Noise
+logging.level.org.apache.kafka=OFF
+logging.level.kafka=OFF
+logging.level.org.springframework.kafka=OFF
